# BallotSense

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
ballotsense_api/: __init__.py  ballot_discovery.py  briefs.py  corrections.py  firestore_repository.py  generation.py  main.py  models.py  repository.py  retrieval.py
docs/: accessibility-pass-2026-07-12.md  ai-execution-playbook.md  correction-workflow.md  deferred-features.md  demo-readiness-checklist.md  execution-plan.md  measure-d-reviewer-checklist.md  mvp-decision-packet.md  phase-1-2-prop36-2024-corpus.md  phase-4-evaluation-rubric.md  phase-6-demo-review-plan.md  phase-6-demo-session-log.md  phase-6-internal-review-2026-07-12.md  phase-7-ballot-discovery.md  phase-7-provider-options.md  phase-8-archive-demo-polish.md  phase-8-november-corpus-plan.md  phase-8-source-readiness-2026-07-12.md  phase-8-statewide-measure-inventory.md  phase-8-transition.md  prop36-reviewer-checklist.md  source-policy.md  staging-deployment.md  system-design-and-roadmap.md
scripts/: check_november_sources.py  embed_approved_corpus.py  generate_cited_brief.py  ingest_approved_corpus.py  prepare_prop36_review_packet.py  promote_review_packet.py  run_phase4_evaluation.py  snapshot_prop36_master_pdf.py
tests/: test_ballot_discovery.py  test_briefs.py  test_corrections.py  test_evaluation_set.py  test_firestore_repository.py  test_generation.py  test_main.py  test_models.py  test_prop36_pipeline.py  test_retrieval.py
web/: package-lock.json  package.json  playwright.config.ts  (+1 more)
(+29 files in other folders)
