[project]
name = "ballotsense-api"
version = "0.1.0"
description = "Citation-first API foundation for the BallotSense voter education MVP."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "google-cloud-firestore>=2.20,<3.0",
  "google-genai>=1.0,<2.0",
  "pypdf>=5.0,<7.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["ballotsense_api*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
